# event-ledger

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  event-ledger-candidate-handout.md  event-ledger-implementation-plan.md  pyproject.toml
services/account-service/src/account_service/: __init__.py  config.py  main.py  metrics.py  schemas.py  storage.py
services/event-gateway/src/event_gateway/: __init__.py  account_client.py  config.py  main.py  metrics.py  rate_limit.py  schemas.py  storage.py
tests/: test_account_service.py  test_delivery_artifacts.py  test_event_gateway.py  test_event_gateway_account_client.py  test_gateway_account_integration.py  test_phase0_scaffold.py
